change in v4.8.1 of command line and config